entity id 컬럼명 변경, 에디터 이미지 저장방식 변경중(단일 저장에서 다중저장으로 변경 예정)